[package]
name = "c4"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"

[dependencies]
dialoguer = "0.7.1"
num_enum = "0.5.1"
rubot = { git = "https://github.com/nitros12/rubot", rev = "9f111deecfcbe8127a4a9a366fc175e2e2310be4" }
